--- a/index.html
+++ b/index.html
@@ -57,7 +57,47 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="container mx-auto">
+      <!-- featured section  -->
+      <section class="text-center my-24">
+        <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+        <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <!--featured tea card container -->
+          <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            <!-- first card -->
+            <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+              <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+              <div class="card-body justify-center">
+                <h2 class="text-2xl font-bold text-black">Milk Tea</h2>
+                <p class="text-black">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- second card -->
+            <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+              <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+              <div class="card-body justify-center">
+                <h2 class="text-2xl font-bold text-black">Black Tea</h2>
+                <p class="text-black">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- third card -->
+            <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+              <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+              <div class="card-body justify-center">
+                <h2 class="text-2xl font-bold text-black">Lemon Tea</h2>
+                <p class="text-black">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- fourth card -->
+            <div class="card  p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+              <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+              <div class="card-body justify-center">
+                <h2 class="text-2xl font-bold text-black">Green Tea</h2>
+                <p class="text-black">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+          </div>
+      </section>
 
     </main>
     <footer>
