--- a/index.html
+++ b/index.html
@@ -98,7 +98,68 @@
             </div>
           </div>
       </section>
-
+      <!-- great tea fresh tea section  -->
+      <section class="my-24 flex gap-12 flex-col lg:flex-row">
+        <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+          <div class="rounded-xl bg-gradient-to-r from-cyan-100 to-blue-100 h-36"></div>
+          <div class="row-span-2 bg-[#E6A6231A] px-8 py-12 flex justify-center items-center rounded-xl">
+            <img src="images/fresh-2.png" alt=""></div>
+            <div class="row-span-2 bg-[#5776391A] px-8 py-12 flex justify-center items-center rounded-xl">
+              <img src="images/fresh-1.png" alt=""></div>
+              <div class="rounded-xl bg-gradient-to-r from-cyan-100 to-blue-100 h-36"></div>
+        </div>
+        <div class="space-y-5 flex-1">
+          <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
+          <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
+          <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
+          <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+      </section>
+      <!-- super client section  -->
+      <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
+        <div class="flex lg:pr-28 items-center">
+          <div class="space-y-5">
+            <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
+            <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            <button class="bg-white text-red-400 w-32 h-12 rounded-md">Show All</button>
+          </div>
+        </div>
+        <!-- review container -->
+        <div class="relative">
+          <!--next review -->
+          <div class="relative z-10 mb-16 opacity-40 p-10 rounded-lg bg-white">
+            <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
+            <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h4 class="font-bold mt-5">Ilham Yuda</h4>
+            <p class="font-medium">Businessman</p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="">
+            </div>
+          </div>
+          <!--current review -->
+          <div class="absolute z-20 top-40 lg:-left-24 lg:w-[430px] p-10 rounded-lg bg-white">
+            <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
+            <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h4 class="font-bold mt-5">Ilham Yuda</h4>
+            <p class="font-medium">Businessman</p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="">
+            </div>
+          </div>
+          <!--previous review -->
+          <div class="relative z-10 opacity-40 p-10 rounded-lg bg-white">
+            <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png" alt="">
+            <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h4 class="font-bold mt-5">Ilham Yuda</h4>
+            <p class="font-medium">Businessman</p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
 
