--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           theme: {
             extend: {
               colors: {
-                clifford: '#da373d',
+                'gradient-start': '#FF8938',
+                'gradient-end': '#F00',
               }
             }
           }
@@ -33,18 +34,20 @@
 </head>
 <body class="font-manrope">
     <header class="container mx-auto">
-      <div class="hero">
-        <div class="hero-content flex-col lg:flex-row">
+      <div class="my-32">
+        <div class="flex justify-between items-center flex-col lg:flex-row">
           <div>
-            <h1 class="text-5xl font-bold">
+            <h1 class="text-5xl font-bold ml-10">
               It's good <br>
               tea time at The <br>
                Tea House</h1>
-            <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-            <button class="bg-red-900 w-28 h-12 rounded-lg">Explore More</button>
+            <p class="py-6 ml-10">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+            <button class="bg-red-900 flex w-36 h-12 pt-3 pl-2 gap-2 rounded-lg ml-10">Explore More
+              <i class="fa-solid fa-arrow-trend-up" style="color: #e594bf;"></i>
+            </button>
           </div>
           <div>
-            <img src="/images/banner.png" class="max-w-sm" />
+            <img src="/images/banner.png" />
             <!-- ratings badge  -->
             <div class="-mt-14 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-52">
               <i class="fa-solid fa-star text-4xl" style="color: #ede607;"></i>
@@ -118,7 +121,7 @@
         </div>
       </section>
       <!-- super client section  -->
-      <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
+      <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end px-16 py-24">
         <div class="flex lg:pr-28 items-center">
           <div class="space-y-5">
             <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
@@ -160,9 +163,84 @@
           </div>
         </div>
       </section>
+      <!-- news and events section -->
+      <section class="py-5">
+        <h3 class="text-5xl font-extrabold text-center">News & Events</h3>
+        <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+          <div class="card bg-white shadow-xl">
+            <figure><img class="pt-3" src="/images/news-1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Feb 05, 2027</h2>
+              <h3 class="text-2xl font-bold text-black">Collecting 8 points for discount</h3>
+              <p>There are many variations of passages of Lorem Ipsum available.</p>
+              <h5 class="text-xl font-semibold text-black">Learn More</h5>
+            </div>
+          </div>
+          <div class="card bg-white shadow-xl">
+            <figure><img class="pt-3" src="/images/news-2.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Feb 05, 2027</h2>
+              <h3 class="text-2xl font-bold text-black">Collecting 8 points for discount</h3>
+              <p>There are many variations of passages of Lorem Ipsum available.</p>
+              <h5 class="text-xl font-semibold text-black">Learn More</h5>
+            </div>
+          </div>
+          <div class="card bg-white shadow-xl">
+            <figure><img class="pt-3" src="/images/news-3.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Feb 05, 2027</h2>
+              <h3 class="text-2xl font-bold text-black">Collecting 8 points for discount</h3>
+              <p>There are many variations of passages of Lorem Ipsum available.</p>
+              <h5 class="text-xl font-semibold text-black">Learn More</h5>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
-
+    <footer class="px-4 lg:px-48 py-10 bg-base-200 text-base-content bg-red-300">
+        <div class="flex justify-between py-14">
+          <img src="images/cup.png" alt="">
+          <div class="flex items-center gap-5">
+            <p>
+              <span class="text-black">Ready to get started?</span>
+            </p>
+            <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end">Get Started</button>
+          </div>
+        </div>
+      <div class="footer">
+        <nav>
+          <header class="footer-title text-black font-semibold">Quick Links</header> 
+          <a class="link link-hover text-black">Home</a> 
+          <a class="link link-hover text-black">About Us</a> 
+          <a class="link link-hover text-black">Insurance</a> 
+          <a class="link link-hover text-black">Privacy Policy</a>
+        </nav> 
+        <nav>
+          <header class="footer-title text-black font-semibold">Our Service</header> 
+          <a class="link link-hover text-black">Life Insurance</a> 
+          <a class="link link-hover text-black">Car Insurance</a> 
+          <a class="link link-hover text-black">Health Insurance</a> 
+          <a class="link link-hover text-black">House Insurance</a> 
+        </nav> 
+        <nav>
+          <header class="footer-title text-black font-semibold">Help</header> 
+          <a class="link link-hover text-black">FAQs</a> 
+          <a class="link link-hover text-black">Contact Us</a> 
+        </nav> 
+        <form>
+          <header class="footer-title text-black">Subscribe to our <br> newsletter</header> 
+          <fieldset class="form-control w-80"> 
+            <div class="relative">
+              <input type="email" placeholder="Email address" class="py-4 bg-transparent border-b-2 border-black outline-none" /> 
+              <button><i class="fa-regular fa-circle-right" style="color: #f60909;"></i></button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <aside class="mt-10 text-center">
+        <p class="text-black">Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+      </aside>
     </footer>
 </body>
 </html>
